--- a/src/test/resources/logging.properties
+++ b/src/test/resources/logging.properties
@@ -16,7 +16,7 @@ java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 
 # note: contrary to log4j and logback, jul does not normally
 # autodetect this configuration file on the classpath (which
-# org.evolvis.tartools:maven-parent:jar:tests inclusion cau-
+# adding org.evolvis.tartools:maven-parent-bs:jar:tests cau-
 # ses), so either copy this into all src/test/resources/ di-
 # rectories of your projects or use InitialiseJDK14Logging()
 # from org.evolvis.tartools:maven-parent-lib:jar (its source
