--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -509,6 +509,7 @@
 			</plugins>
 		</pluginManagement>
 		<plugins>
+			<!-- disabled due to https://issues.sonatype.org/browse/MVNCENTRAL-6515
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
@@ -529,7 +530,7 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
