retry with .txt instead of .cp
(escaping is not the issue, Sonatype did fail even for empty ones)

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -522,8 +522,8 @@
 						<configuration>
 							<artifacts>
 								<artifact>
-									<file>${project.build.directory}/${project.artifactId}-${project.version}.cp</file>
-									<type>cp</type>
+									<file>${project.build.directory}/${project.artifactId}-${project.version}.txt</file>
+									<type>txt</type>
 								</artifact>
 							</artifacts>
 						</configuration>
@@ -595,7 +595,8 @@
 							<includeScope>runtime</includeScope>
 							<!-- use marker to præfix paths OS-independently -->
 							<localRepoProperty>&#x96;M2REPO&#x97;</localRepoProperty>
-							<outputFile>${project.build.directory}/${project.artifactId}-${project.version}.cp</outputFile>
+							<!-- match filename this is deployed as -->
+							<outputFile>${project.build.directory}/${project.artifactId}-${project.version}.txt</outputFile>
 							<!-- avoid zero-length files; these are better reusable anyway -->
 							<outputFilterFile>true</outputFilterFile>
 							<!-- also make this available in the ${runtime.classpath} property -->
