Revert "test: include all scopes so we’ll know the upload won’t fail with actual data"
This reverts commit 1349ff23c6e8e3c60d39015dba3a92b353928e89.

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -592,7 +592,7 @@
 							<!-- use control characters to separate OS-independently -->
 							<fileSeparator>&#x95;</fileSeparator>
 							<!-- include runtime scopes only; provided may also be needed -->
-							<!-- includeScope>runtime</includeScope -->
+							<includeScope>runtime</includeScope>
 							<!-- use marker to præfix paths OS-independently -->
 							<localRepoProperty>&#x96;M2REPO&#x97;</localRepoProperty>
 							<!-- match filename this is deployed as -->
