--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -10,7 +10,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.evolvis.tartools</groupId>
 	<artifactId>maven-parent</artifactId>
-	<version>1.902-SNAPSHOT</version>
+	<version>1.902</version>
 	<packaging>pom</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Parent POM for Maven projects — POM</description>
@@ -52,7 +52,7 @@
 		<maven.compiler.release>${javaRelease}</maven.compiler.release>
 		<releaseVersion>${project.version}</releaseVersion>
 		<!-- dependency management for the “tests” classifier and library JARs we provide -->
-		<org.evolvis.tartools.maven-parent.version>1.902-SNAPSHOT</org.evolvis.tartools.maven-parent.version>
+		<org.evolvis.tartools.maven-parent.version>1.902</org.evolvis.tartools.maven-parent.version>
 		<!-- ‣ maven plugins -->
 		<gmavenplus.plugin.version>1.12.1</gmavenplus.plugin.version>
 		<maven.antrun.version>3.0.0</maven.antrun.version>
@@ -88,7 +88,7 @@
 		<connection>scm:git:https://evolvis.org/anonscm/git/tartools/mvnparent.git</connection>
 		<developerConnection>scm:git:ssh://maven@evolvis.org/scmrepos/git/tartools/mvnparent.git</developerConnection>
 		<url>https://evolvis.org/plugins/scmgit/cgi-bin/gitweb.cgi?p=tartools/mvnparent.git</url>
-		<tag>HEAD</tag>
+		<tag>maven-parent-bs-1.902</tag>
 	</scm>
 	<profiles>
 		<profile>
@@ -590,11 +590,11 @@
 							<!-- attached manually; automatic attach filename is wrong -->
 							<attach>false</attach>
 							<!-- use control characters to separate OS-independently -->
-							<fileSeparator>&#x95;</fileSeparator>
+							<fileSeparator></fileSeparator>
 							<!-- include runtime scopes only; provided may also be needed -->
 							<!-- includeScope>runtime</includeScope -->
 							<!-- use marker to præfix paths OS-independently -->
-							<localRepoProperty>&#x96;M2REPO&#x97;</localRepoProperty>
+							<localRepoProperty>M2REPO</localRepoProperty>
 							<!-- match filename this is deployed as -->
 							<outputFile>${project.build.directory}/${project.artifactId}-${project.version}.txt</outputFile>
 							<!-- avoid zero-length files; these are better reusable anyway -->
@@ -602,7 +602,7 @@
 							<!-- also make this available in the ${runtime.classpath} property -->
 							<outputProperty>runtime.classpath</outputProperty>
 							<!-- use control characters to separate OS-independently -->
-							<pathSeparator>&#x9C;</pathSeparator>
+							<pathSeparator></pathSeparator>
 							<!-- consistence -->
 							<regenerateFile>true</regenerateFile>
 						</configuration>
