move generate-classpath-artefact to an earlier phase

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -563,7 +563,7 @@
 					</execution>
 					<execution>
 						<id>generate-classpath-artefact</id>
-						<phase>compile</phase>
+						<phase>generate-sources</phase>
 						<goals>
 							<goal>build-classpath</goal>
 						</goals>
