document how the mainClass manifest entry is now obsolete

--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -83,6 +83,7 @@
 				<configuration>
 					<archive>
 						<manifest>
+							<!-- with run.sh this is no longer necessary -->
 							<mainClass>org.evolvis.tartools.mvnparent.examples.Main</mainClass>
 						</manifest>
 					</archive>
