--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>org.evolvis.tartools</groupId>
 		<artifactId>maven-parent</artifactId>
-		<version>1.903</version>
+		<version>1.904-SNAPSHOT</version>
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 	<artifactId>maven-parent-lib</artifactId>
