Revert "test: include all scopes so we’ll know the upload won’t fail with actual data"
This reverts commit 3c5a14ae265a511fadc21e74b10cff309adbd76a.

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -573,7 +573,7 @@
 							<!-- use control characters to separate OS-independently -->
 							<fileSeparator></fileSeparator>
 							<!-- include runtime scopes only; provided may also be needed -->
-							<!-- includeScope>runtime</includeScope -->
+							<includeScope>runtime</includeScope>
 							<!-- use marker to præfix paths OS-independently -->
 							<localRepoProperty>M2REPO</localRepoProperty>
 							<!-- use name only so run.sh knows which JAR to run -->
