also use the .cp file if present
• for speedup (it’s *really* slow to get from the JAR manifest)
• to allow local user override

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -576,7 +576,7 @@
 							<includeScope>runtime</includeScope>
 							<!-- use marker to præfix paths OS-independently -->
 							<localRepoProperty>M2REPO</localRepoProperty>
-							<!-- use name only so run.sh knows which JAR to run -->
+							<!-- so run.sh knows which JAR to run and for speedup -->
 							<outputFile>${project.build.directory}/${project.artifactId}-${project.version}.cp</outputFile>
 							<!-- also make this available in the ${runtime.classpath} property -->
 							<outputProperty>runtime.classpath</outputProperty>
