--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -579,8 +579,10 @@
 										<exclude>commons-collections:commons-collections:[3.0,3.2.1]</exclude>
 										<exclude>commons-collections:commons-collections:4.0</exclude>
 										<!-- Avoid log4shell and related exploits -->
-										<exclude>org.apache.logging.log4j:log4j-api:(,2.17.0)</exclude>
-										<exclude>org.apache.logging.log4j:log4j-core:(,2.17.0)</exclude>
+										<exclude>org.apache.logging.log4j:log4j-api:(,2.12.3)</exclude>
+										<exclude>org.apache.logging.log4j:log4j-api:[2.13,2.17.0)</exclude>
+										<exclude>org.apache.logging.log4j:log4j-core:(,2.12.3)</exclude>
+										<exclude>org.apache.logging.log4j:log4j-core:[2.13,2.17.0)</exclude>
 										<!-- Avoid similar security risks -->
 										<exclude>ch.qos.logback:logback-core:(,1.2.9)</exclude>
 									</excludes>
