--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -432,8 +432,8 @@
 						<dependency>
 							<!-- https://github.com/codehaus-plexus/plexus-archiver/issues/160 -->
 							<groupId>org.evolvis.tartools.forked</groupId>
-							<artifactId>plexus-archiver</artifactId>
-							<version>4.2.1</version>
+							<artifactId>plexus-archiver-4.2.1</artifactId>
+							<version>2</version>
 						</dependency>
 					</dependencies>
 				</plugin>
