--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -283,6 +283,13 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
 					<version>${maven.assembly.version}</version>
+					<dependencies>
+						<dependency>
+							<groupId>commons-io</groupId>
+							<artifactId>commons-io</artifactId>
+							<version>2.11.0</version>
+						</dependency>
+					</dependencies>
 					<configuration>
 						<overrideUid>0</overrideUid>
 						<overrideUserName>root</overrideUserName>
@@ -313,6 +320,13 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
 					<version>${maven.dependency.version}</version>
+					<dependencies>
+						<dependency>
+							<groupId>commons-io</groupId>
+							<artifactId>commons-io</artifactId>
+							<version>2.11.0</version>
+						</dependency>
+					</dependencies>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -349,6 +363,13 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-eclipse-plugin</artifactId>
 					<version>${maven.eclipse.version}</version>
+					<dependencies>
+						<dependency>
+							<groupId>commons-io</groupId>
+							<artifactId>commons-io</artifactId>
+							<version>2.11.0</version>
+						</dependency>
+					</dependencies>
 					<configuration>
 						<downloadJavadocs>true</downloadJavadocs>
 						<downloadSources>true</downloadSources>
@@ -417,12 +438,31 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-shade-plugin</artifactId>
 					<version>${maven.shade.version}</version>
+					<dependencies>
+						<dependency>
+							<groupId>com.google.guava</groupId>
+							<artifactId>guava</artifactId>
+							<version>31.0.1-jre</version>
+						</dependency>
+						<dependency>
+							<groupId>commons-io</groupId>
+							<artifactId>commons-io</artifactId>
+							<version>2.11.0</version>
+						</dependency>
+					</dependencies>
 				</plugin>
 				<plugin>
 					<!-- from Super POM, not used any more -->
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-site-plugin</artifactId>
 					<version>${maven.site.version}</version>
+					<dependencies>
+						<dependency>
+							<groupId>commons-io</groupId>
+							<artifactId>commons-io</artifactId>
+							<version>2.11.0</version>
+						</dependency>
+					</dependencies>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -446,6 +486,18 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
 					<version>${maven.war.version}</version>
+					<dependencies>
+						<dependency>
+							<groupId>com.thoughtworks.xstream</groupId>
+							<artifactId>xstream</artifactId>
+							<version>1.4.19</version>
+						</dependency>
+						<dependency>
+							<groupId>commons-io</groupId>
+							<artifactId>commons-io</artifactId>
+							<version>2.11.0</version>
+						</dependency>
+					</dependencies>
 					<configuration>
 						<failOnMissingWebXml>false</failOnMissingWebXml>
 						<webappDirectory>${project.build.directory}/war/webapps/</webappDirectory>
