--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -151,7 +151,7 @@
 				<!-- https://issues.apache.org/jira/browse/MCOMPILER-477 -->
 				<!--maven.compiler.version>3.5.1</maven.compiler.version-->
 				<!-- https://issues.apache.org/jira/browse/MJAVADOC-703 -->
-				<maven.javadoc.version>3.0.1</maven.javadoc.version>
+				<!--maven.javadoc.version>3.0.1</maven.javadoc.version-->
 				<!-- ‣ dependency management -->
 			</properties>
 		</profile>
