--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -62,7 +62,6 @@
 		<maven.buildhelper.version>3.3.0</maven.buildhelper.version>
 		<maven.clean.version>3.1.0</maven.clean.version>
 		<maven.compiler.version>3.9.0</maven.compiler.version>
-		<!-- but https://issues.apache.org/jira/browse/MDEP-753 -->
 		<maven.dependency.version>3.2.0</maven.dependency.version>
 		<maven.deploy.version>2.8.2</maven.deploy.version>
 		<maven.ear.version>2.10.1</maven.ear.version>
@@ -307,6 +306,11 @@
 							<groupId>commons-io</groupId>
 							<artifactId>commons-io</artifactId>
 							<version>2.11.0</version>
+						</dependency>
+						<dependency>
+							<groupId>org.apache.maven.shared</groupId>
+							<artifactId>maven-dependency-analyzer</artifactId>
+							<version>1.12.0</version>
 						</dependency>
 					</dependencies>
 				</plugin>
