Revert "try to test the fix, part 1"
This reverts commit e34dfb56fc6c6499ef10042cedb2d03cc4d58742.

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -62,8 +62,8 @@
 		<maven.buildhelper.version>3.3.0</maven.buildhelper.version>
 		<maven.clean.version>3.1.0</maven.clean.version>
 		<maven.compiler.version>3.9.0</maven.compiler.version>
-		<!-- but https://issues.apache.org/jira/browse/MDEP-753 -->
-		<maven.dependency.version>3.2.0</maven.dependency.version>
+		<!-- due to https://issues.apache.org/jira/browse/MDEP-753 -->
+		<maven.dependency.version>3.1.2</maven.dependency.version>
 		<maven.deploy.version>2.8.2</maven.deploy.version>
 		<maven.ear.version>2.10.1</maven.ear.version>
 		<maven.eclipse.version>2.10</maven.eclipse.version>
