--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -58,14 +58,17 @@
 		<!-- ‣ maven plugins -->
 		<gmavenplus.plugin.version>1.13.1</gmavenplus.plugin.version>
 		<maven.antrun.version>3.0.0</maven.antrun.version>
+		<!-- ↓ has dependencies to check on upgrade -->
 		<maven.assembly.version>3.3.0</maven.assembly.version>
 		<maven.buildhelper.version>3.3.0</maven.buildhelper.version>
 		<maven.clean.version>3.1.0</maven.clean.version>
 		<maven.compiler.version>3.9.0</maven.compiler.version>
+		<!-- ↓ has dependencies to check on upgrade -->
 		<!-- due to https://issues.apache.org/jira/browse/MDEP-753 -->
 		<maven.dependency.version>3.1.2</maven.dependency.version>
 		<maven.deploy.version>2.8.2</maven.deploy.version>
 		<maven.ear.version>2.10.1</maven.ear.version>
+		<!-- ↓ has dependencies to check on upgrade -->
 		<maven.eclipse.version>2.10</maven.eclipse.version>
 		<maven.enforcer.version>3.0.0</maven.enforcer.version>
 		<maven.exec.version>3.0.0</maven.exec.version>
@@ -78,10 +81,14 @@
 		<maven.release.version>2.5.3</maven.release.version>
 		<!-- due to MRESOURCES-237 and MSHARED-325 -->
 		<maven.resources.version>2.6</maven.resources.version>
+		<!-- ↓ has dependencies to check on upgrade -->
 		<maven.shade.version>3.2.4</maven.shade.version>
+		<!-- ↓ has dependencies to check on upgrade -->
 		<maven.site.version>3.10.0</maven.site.version>
+		<!-- ↓ has dependencies to check on upgrade -->
 		<maven.source.version>3.2.1</maven.source.version>
 		<maven.surefire.version>2.22.2</maven.surefire.version>
+		<!-- ↓ has dependencies to check on upgrade -->
 		<maven.war.version>2.6</maven.war.version>
 		<!-- ‣ dependency management -->
 	</properties>
