IntelliJ project-wide analysis

--- a/src/test/resources/simplelogger.properties
+++ b/src/test/resources/simplelogger.properties
@@ -1,3 +1,6 @@
+# suppress inspection "UnusedProperty" for whole file
+# (the above line is for IntelliJ)
+
 # org.slf4j:slf4j-simple is not very configurable;
 # this differs from the other files in this directory
 
