--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -55,17 +55,20 @@
 		<releaseVersion>${project.version}</releaseVersion>
 		<!-- dependency management for the “tests” classifier and library JARs we provide -->
 		<org.evolvis.tartools.maven-parent.version>2.4-SNAPSHOT</org.evolvis.tartools.maven-parent.version>
+		<!-- dependency management for Maven plugins -->
+		<!-- for many -->
+		<mvnplugindep.commons-io>2.11.0</mvnplugindep.commons-io>
+		<!-- for maven-war-plugin -->
+		<mvnplugindep.xstream>1.4.19</mvnplugindep.xstream>
 		<!-- ‣ maven plugins -->
 		<gmavenplus.plugin.version>1.13.1</gmavenplus.plugin.version>
 		<maven.antrun.version>3.0.0</maven.antrun.version>
 		<!-- ↓ has dependencies to check on upgrade -->
 		<maven.assembly.version>3.3.0</maven.assembly.version>
 		<maven.buildhelper.version>3.3.0</maven.buildhelper.version>
-		<maven.clean.version>3.1.0</maven.clean.version>
-		<maven.compiler.version>3.9.0</maven.compiler.version>
-		<!-- ↓ has dependencies to check on upgrade -->
-		<!-- due to https://issues.apache.org/jira/browse/MDEP-753 -->
-		<maven.dependency.version>3.1.2</maven.dependency.version>
+		<maven.clean.version>3.2.0</maven.clean.version>
+		<maven.compiler.version>3.10.1</maven.compiler.version>
+		<maven.dependency.version>3.3.0</maven.dependency.version>
 		<maven.deploy.version>2.8.2</maven.deploy.version>
 		<maven.ear.version>2.10.1</maven.ear.version>
 		<!-- ↓ has dependencies to check on upgrade -->
@@ -74,17 +77,17 @@
 		<maven.exec.version>3.0.0</maven.exec.version>
 		<maven.gpg.version>3.0.1</maven.gpg.version>
 		<maven.install.version>2.5.2</maven.install.version>
-		<maven.jacoco.version>0.8.7</maven.jacoco.version>
+		<maven.jacoco.version>0.8.8</maven.jacoco.version>
 		<maven.jar.version>3.2.2</maven.jar.version>
-		<maven.javadoc.version>3.3.1</maven.javadoc.version>
+		<maven.javadoc.version>3.3.2</maven.javadoc.version>
 		<maven.latex.version>1.4.4</maven.latex.version>
 		<maven.release.version>2.5.3</maven.release.version>
 		<!-- due to MRESOURCES-237 and MSHARED-325 -->
 		<maven.resources.version>2.6</maven.resources.version>
 		<!-- ↓ has dependencies to check on upgrade -->
-		<maven.shade.version>3.2.4</maven.shade.version>
+		<maven.shade.version>3.3.0</maven.shade.version>
 		<!-- ↓ has dependencies to check on upgrade -->
-		<maven.site.version>3.10.0</maven.site.version>
+		<maven.site.version>3.11.0</maven.site.version>
 		<!-- ↓ has dependencies to check on upgrade -->
 		<maven.source.version>3.2.1</maven.source.version>
 		<maven.surefire.version>2.22.2</maven.surefire.version>
@@ -286,7 +289,7 @@
 						<dependency>
 							<groupId>commons-io</groupId>
 							<artifactId>commons-io</artifactId>
-							<version>2.11.0</version>
+							<version>${mvnplugindep.commons-io}</version>
 						</dependency>
 					</dependencies>
 					<configuration>
@@ -319,13 +322,6 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
 					<version>${maven.dependency.version}</version>
-					<dependencies>
-						<dependency>
-							<groupId>commons-io</groupId>
-							<artifactId>commons-io</artifactId>
-							<version>2.11.0</version>
-						</dependency>
-					</dependencies>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -366,7 +362,7 @@
 						<dependency>
 							<groupId>commons-io</groupId>
 							<artifactId>commons-io</artifactId>
-							<version>2.11.0</version>
+							<version>${mvnplugindep.commons-io}</version>
 						</dependency>
 					</dependencies>
 					<configuration>
@@ -441,14 +437,9 @@
 					<version>${maven.shade.version}</version>
 					<dependencies>
 						<dependency>
-							<groupId>com.google.guava</groupId>
-							<artifactId>guava</artifactId>
-							<version>31.0.1-jre</version>
-						</dependency>
-						<dependency>
 							<groupId>commons-io</groupId>
 							<artifactId>commons-io</artifactId>
-							<version>2.11.0</version>
+							<version>${mvnplugindep.commons-io}</version>
 						</dependency>
 					</dependencies>
 				</plugin>
@@ -461,7 +452,7 @@
 						<dependency>
 							<groupId>commons-io</groupId>
 							<artifactId>commons-io</artifactId>
-							<version>2.11.0</version>
+							<version>${mvnplugindep.commons-io}</version>
 						</dependency>
 					</dependencies>
 				</plugin>
@@ -491,12 +482,12 @@
 						<dependency>
 							<groupId>com.thoughtworks.xstream</groupId>
 							<artifactId>xstream</artifactId>
-							<version>1.4.19</version>
+							<version>${mvnplugindep.xstream}</version>
 						</dependency>
 						<dependency>
 							<groupId>commons-io</groupId>
 							<artifactId>commons-io</artifactId>
-							<version>2.11.0</version>
+							<version>${mvnplugindep.commons-io}</version>
 						</dependency>
 					</dependencies>
 					<configuration>
@@ -663,8 +654,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
 				<executions>
+					<!--suppress MavenModelInspection -->
 					<execution>
-						<!--suppress MavenModelInspection -->
 						<id>attach-sources</id>
 						<phase>DISABLE_FORKED_LIFECYCLE_MSOURCES-13</phase>
 					</execution>
