--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,8 @@
 	</licenses>
 	<inceptionYear>2016</inceptionYear>
 	<properties>
-		<!-- $(date -u +'%Y-%m-%dT%H:%M:%SZ') -->
-		<project.build.outputTimestamp>2022-02-07T21:12:41Z</project.build.outputTimestamp>
+		<!-- $(date -u +'%Y-%m-%dT%H:%M:%SZ') or MRELEASE 3.0.0 -->
+		<project.build.outputTimestamp>2022-04-08T03:08:10Z</project.build.outputTimestamp>
 	</properties>
 	<scm>
 		<connection>scm:git:https://evolvis.org/anonscm/git/tartools/mvnparent.git</connection>
