--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -47,6 +47,12 @@
 		<!-- http://groovy.github.io/GMavenPlus/compileTests-mojo.html#targetBytecode -->
 		<gmavenplus.javaRelease>1.8</gmavenplus.javaRelease>
 		<maven.minimum.version>3.2</maven.minimum.version>
+		<!-- ‣ should be set during build -->
+		<JOB_NAME><!-- set by Jenkins --></JOB_NAME>
+		<BUILD_ID><!-- set by Jenkins --></BUILD_ID>
+		<BUILD_NUMBER><!-- set by Jenkins --></BUILD_NUMBER>
+		<GIT_COMMIT><!-- set by Jenkins --></GIT_COMMIT>
+		<runtime.classpath><!-- set by maven-dependency-plugin --></runtime.classpath>
 		<!-- ‣ internal and utility settings -->
 		<maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
 		<build.timestamp>${maven.build.timestamp}</build.timestamp>
