find a different way to appease IntelliJ

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -342,9 +342,13 @@
 								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
 							</manifest>
 							<manifestEntries>
+								<!--suppress UnresolvedMavenProperty -->
 								<Build-Job>${JOB_NAME}</Build-Job>
+								<!--suppress UnresolvedMavenProperty -->
 								<Build-Id>${BUILD_ID}</Build-Id>
+								<!--suppress UnresolvedMavenProperty -->
 								<Build-Number>${BUILD_NUMBER}</Build-Number>
+								<!--suppress UnresolvedMavenProperty -->
 								<Build-Repository-Rev>${GIT_COMMIT}</Build-Repository-Rev>
 								<Build-Time>${maven.build.timestamp}</Build-Time>
 								<Target-JRE>${javaRelease}</Target-JRE>
@@ -394,9 +398,13 @@
 								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
 							</manifest>
 							<manifestEntries>
+								<!--suppress UnresolvedMavenProperty -->
 								<Build-Job>${JOB_NAME}</Build-Job>
+								<!--suppress UnresolvedMavenProperty -->
 								<Build-Id>${BUILD_ID}</Build-Id>
+								<!--suppress UnresolvedMavenProperty -->
 								<Build-Number>${BUILD_NUMBER}</Build-Number>
+								<!--suppress UnresolvedMavenProperty -->
 								<Build-Repository-Rev>${GIT_COMMIT}</Build-Repository-Rev>
 								<Build-Time>${maven.build.timestamp}</Build-Time>
 								<Target-JRE>${javaRelease}</Target-JRE>
@@ -405,6 +413,7 @@
 								<version_copyright>${archiver.copyright}</version_copyright>
 								<version_vendor>${project.organization.name} (${project.organization.url})</version_vendor>
 								<version_version>${project.version}</version_version>
+								<!--suppress UnresolvedMavenProperty -->
 								<x-tartools-cp>${runtime.classpath}</x-tartools-cp>
 							</manifestEntries>
 						</archive>
@@ -502,9 +511,13 @@
 								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
 							</manifest>
 							<manifestEntries>
+								<!--suppress UnresolvedMavenProperty -->
 								<Build-Job>${JOB_NAME}</Build-Job>
+								<!--suppress UnresolvedMavenProperty -->
 								<Build-Id>${BUILD_ID}</Build-Id>
+								<!--suppress UnresolvedMavenProperty -->
 								<Build-Number>${BUILD_NUMBER}</Build-Number>
+								<!--suppress UnresolvedMavenProperty -->
 								<Build-Repository-Rev>${GIT_COMMIT}</Build-Repository-Rev>
 								<Build-Time>${maven.build.timestamp}</Build-Time>
 								<Target-JRE>${javaRelease}</Target-JRE>
