relocate entire mvnparent groupId
(to org.evolvis.tartools.maven-parent)

in order to avoid “redundant groupId” complaint in projects using it

--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -2,19 +2,19 @@
 <!--
 	To retrieve the latest source code, useful instructions and other aids:
 
-	$ mvn -U -Dartifact=org.evolvis.tartools:maven-parent-bs:RELEASE:tgz:source -DoutputDirectory=. dependency:copy #
+	$ mvn -U -Dartifact=org.evolvis.tartools.maven-parent:bs:RELEASE:tgz:source -DoutputDirectory=. dependency:copy #
 
 	Replace RELEASE with the <version> number below to get the artefact corresponding to that release.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.evolvis.tartools</groupId>
-		<artifactId>maven-parent</artifactId>
+		<groupId>org.evolvis.tartools.maven-parent</groupId>
+		<artifactId>pom</artifactId>
 		<version>2.4-SNAPSHOT</version>
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
-	<artifactId>maven-parent-lib</artifactId>
+	<artifactId>lib</artifactId>
 	<packaging>jar</packaging>
 	<description>Parent POM for Maven projects — Library</description>
 	<licenses>
@@ -38,8 +38,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.evolvis.tartools</groupId>
-			<artifactId>maven-parent-bs</artifactId>
+			<groupId>org.evolvis.tartools.maven-parent</groupId>
+			<artifactId>bs</artifactId>
 			<classifier>tests</classifier>
 			<scope>test</scope>
 		</dependency>
@@ -71,7 +71,7 @@
 							</ignoredUnusedDeclaredDependencies>
 							<usedDependencies>
 								<!-- must be on the test classpath -->
-								<usedDependency>org.evolvis.tartools:maven-parent-bs</usedDependency>
+								<usedDependency>org.evolvis.tartools.maven-parent:bs</usedDependency>
 							</usedDependencies>
 						</configuration>
 					</execution>
