--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <!--
 	To retrieve the latest source code, useful instructions and other aids:
 
-	$ mvn -U -Dartifact=org.evolvis.tartools:maven-parent-bs:RELEASE:tgz:source -DoutputDirectory=. dependency:copy #
+	$ mvn -U -Dartifact=org.evolvis.tartools.maven-parent:bs:RELEASE:tgz:source -DoutputDirectory=. dependency:copy #
 
 	Replace RELEASE with the <version> number below to get the artefact corresponding to that release.
 -->
@@ -10,14 +10,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.evolvis.tartools</groupId>
-		<artifactId>maven-parent</artifactId>
+		<groupId>org.evolvis.tartools.maven-parent</groupId>
+		<artifactId>pom</artifactId>
 		<version>2.4-SNAPSHOT</version>
 		<relativePath>./parent/pom.xml</relativePath>
 	</parent>
 	<!-- include groupId and version even if redundant for ckdep/depsrc/mksrc.sh -->
-	<groupId>org.evolvis.tartools</groupId>
-	<artifactId>maven-parent-bs</artifactId>
+	<groupId>org.evolvis.tartools.maven-parent</groupId>
+	<artifactId>bs</artifactId>
 	<version>2.4-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<description>Parent POM for Maven projects — buildsystem</description>
