--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -337,9 +337,11 @@
 					<version>${maven.ear.version}</version>
 					<configuration>
 						<archive>
+							<addMavenDescriptor>true</addMavenDescriptor>
 							<manifest>
 								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+								<addBuildEnvironmentEntries>true</addBuildEnvironmentEntries>
 							</manifest>
 							<manifestEntries>
 								<!--suppress UnresolvedMavenProperty -->
@@ -393,9 +395,11 @@
 					<version>${maven.jar.version}</version>
 					<configuration>
 						<archive>
+							<addMavenDescriptor>true</addMavenDescriptor>
 							<manifest>
 								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+								<addBuildEnvironmentEntries>true</addBuildEnvironmentEntries>
 							</manifest>
 							<manifestEntries>
 								<!--suppress UnresolvedMavenProperty -->
@@ -425,9 +429,11 @@
 					<version>${maven.javadoc.version}</version>
 					<configuration>
 						<archive>
+							<addMavenDescriptor>true</addMavenDescriptor>
 							<manifest>
 								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+								<addBuildEnvironmentEntries>true</addBuildEnvironmentEntries>
 							</manifest>
 							<manifestEntries>
 								<!--suppress UnresolvedMavenProperty -->
@@ -529,9 +535,11 @@
 						<failOnMissingWebXml>false</failOnMissingWebXml>
 						<webappDirectory>${project.build.directory}/war/webapps/</webappDirectory>
 						<archive>
+							<addMavenDescriptor>true</addMavenDescriptor>
 							<manifest>
 								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+								<addBuildEnvironmentEntries>true</addBuildEnvironmentEntries>
 							</manifest>
 							<manifestEntries>
 								<!--suppress UnresolvedMavenProperty -->
