--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>org.evolvis.tartools.maven-parent</groupId>
 		<artifactId>pom</artifactId>
-		<version>2.900</version>
+		<version>2.901-SNAPSHOT</version>
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 	<artifactId>lib</artifactId>
