--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -10,7 +10,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.evolvis.tartools.maven-parent</groupId>
 	<artifactId>pom</artifactId>
-	<version>2.900</version>
+	<version>2.901-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Parent POM for Maven projects — POM</description>
@@ -54,7 +54,7 @@
 		<maven.compiler.target>${javaRelease}</maven.compiler.target>
 		<releaseVersion>${project.version}</releaseVersion>
 		<!-- dependency management for the “tests” classifier and library JARs we provide -->
-		<org.evolvis.tartools.maven-parent.version>2.900</org.evolvis.tartools.maven-parent.version>
+		<org.evolvis.tartools.maven-parent.version>2.901-SNAPSHOT</org.evolvis.tartools.maven-parent.version>
 		<!-- dependency management for Maven plugins -->
 		<!-- for many -->
 		<mvnplugindep.commons-io>2.11.0</mvnplugindep.commons-io>
@@ -102,7 +102,7 @@
 		<connection>scm:git:https://evolvis.org/anonscm/git/tartools/mvnparent.git</connection>
 		<developerConnection>scm:git:ssh://maven@evolvis.org/scmrepos/git/tartools/mvnparent.git</developerConnection>
 		<url>https://evolvis.org/plugins/scmgit/cgi-bin/gitweb.cgi?p=tartools/mvnparent.git</url>
-		<tag>bs-2.900</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<profiles>
 		<profile>
